[package]
name = "pink"
version = "0.1.0"
authors = ["Shelven Zhou <favoring.zhou49@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Ink! Contract Runtime"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmi = { git = "https://github.com/mesalock-linux/wasmi-sgx", tag = "sgx_1.1.3" }
wabt = { git = "https://github.com/mesalock-linux/wabt-rs-sgx", tag = "sgx_1.1.3" }
parity-wasm = { version = "0.41", default-features = false }
pwasm-utils = { version = "0.16", default-features = false }
wasmi-validation = { version = "0.3.0", default-features = false }
bitflags = { version = "1.0" }
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
serde = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx" }
lazy_static = { version = "1.1.0", features = ["spin_no_std"] }
assert_matches = { version = "1.3.0", default-features = false }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
