# [package]
# name = "pink"
# version = "3.0.0"
# authors = ["Shelven Zhou <favoring.zhou49@gmail.com>"]
# edition = "2018"
# license = "MIT/Apache-2.0"
# readme = "README.md"
# description = "Ink! Contract Runtime"

[workspace]
members = [
    "primitives/core",
    "primitives/runtime-interface",
    "primitives/sandbox",
    "primitives/serializer",
    "primitives/std",
    "primitives/wasm-interface",
    "utils/wasm-builder",
]
